compiler/tests/fixtures/invalid/semantics/rename_without_parent.viv
// Invalid: action renames a role but has no parent

action no-parent:
    roles:
        @actor:
            as: initiator
        @buddy:
            renames: @friend
